add command line args; read repo list; delete repo after analysis; replace \\ with /.